# cmapss

./: .gitignore  .pre-commit-config.yaml  README.md  hparams.db  hparams_transformer.db  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml
configs/datamodule/: cmapss.yaml
configs/experiment/: c1228.yaml  default_config_1308_RMSE.yaml  eval.yaml  example.yaml  exp.yaml  fd1-1228.yaml  fd1.yaml  fd2.yaml  net.yaml  paper.yaml  t1149.yaml  t1219.yaml  transformer.yaml  weight-decay.yaml
configs/hparams_search/: cmapss_optuna.yaml  mnist_optuna.yaml  transformer_optuna.yaml
configs/hydra/: default.yaml
configs/logger/: wandb.yaml
configs/model/: 3conv.yaml  cmapss.yaml  cnnlstm.yaml  default.yaml  experiment.yaml  paper.yaml  plmodule.yaml  transformer.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
docs/: index.md
scripts/: schedule.sh
src/: hparams_transformer.db  train.py
src/datamodules/: cmapss.py  cmapss_datamodule.py
src/models/: cmapss_module.py  cnnlstm_module.py  exp.py  experiment.py  model.py  plmodule.py
src/models/components/: 3conv.py  cnn_lstm_net.py  paper.py  (+2 more)
src/modules/: pl_module.py
src/utils/: utils.py
src/wandb/: latest-run
tests/: conftest.py  test_cmapss_datamodule.py  test_cnn_lstm_net.py  test_conv.py  test_datamodule.py  test_eval.py  test_exp.py  test_experiment.py  test_feature_extractor.py  test_model.py  test_paper.py  test_pl_module.py  test_sweeps.py  test_train.py
(+125 files in other folders)
