[metadata]
name = cmapss
description = Novel algorithms to predict Remaining Useful Life (RUL) on NASA’s benchmark dataset, CMAPSS turbofan engine degradation simulation.
url = https://github.com/ozogxyz/cmapss
long_description = file: README.md
author = Orkun Ozoglu
author_email = ""
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core==0.2.*

    # Add project specific dependencies
    # Stuff easy to break with updates
    pytorch-lightning>=1.7,<1.10
    torchmetrics==0.10.*
    hydra-core==1.2.*
    wandb
    streamlit
    rul-datasets>=0.3,<0.11
    # hydra-joblib-launcher

    # Stable stuff usually backward compatible
    rich
    dvc
    python-dotenv
    matplotlib
    stqdm

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
